--- a/src/app/pages/printers/printers.component.html
+++ b/src/app/pages/printers/printers.component.html
@@ -1,1 +1,68 @@
-<p>printers works!</p>
+<div class="container animate__animated animate__fadeIn">
+
+  <div class="row pt-5">
+    <div class="col text-center">
+      <h3>La Elección Inteligente</h3>
+      <p><br>En BAC SUPPORT, creemos en la simplicidad de una elección inteligente. Por eso, cuando se trata de adquirir una impresora de calidad, su elección debe ser clara: RICOH. Nuestra experiencia y dedicación al cliente nos convierten en el socio ideal para comprar impresoras RICOH. La razón es sencilla: estas impresoras se destacan por su calidad, innovación y rendimiento superior.<br><br>En esta página, descubrirá por qué las impresoras RICOH son la elección definitiva. La calidad y la excelencia son nuestros estándares.<br><strong>Bienvenido a una decisión inteligente, bienvenido a BAC SUPPORT.</strong></p>
+    </div>
+  </div>
+
+  <div class="row pt-5">
+    <h3 class="text-center pb-4">¿Por qué Elegirnos?</h3>
+    <div class="col-lg-4 col-sm-12">
+      <h5 class="pb-3">Experiencia y Trayectoria</h5>
+      <p>Con una sólida trayectoria en el negocio de la venta de impresoras RICOH, en BAC SUPPORT conocemos a la perfección las necesidades de nuestros clientes. No importa si su empresa es pequeña, mediana o grande; tenemos la experiencia para ayudarlo a tomar la decisión correcta y brindarle soluciones de impresión eficaces.</p>
+    </div>
+    <div class="col-lg-4 col-sm-12 info text-center">
+      <h5 class="pb-3 title2">Atención al Cliente</h5>
+      <p>El cliente es lo primero. Brindamos asesoramiento personalizado para ayudarlo a seleccionar la impresora adecuada y ofrecemos un sólido soporte técnico para mantener su equipo funcionando sin problemas. Estamos aquí para resolver cualquier problema posventa.</p>
+    </div>
+    <div class="col-lg-4 col-sm-12 text-end">
+      <h5 class="pb-3 title2">Variedad de Modelos</h5>
+      <p>Tenemos una amplia selección de impresoras RICOH, desde modelos multifunción hasta impresoras láser de alta calidad. Trabajamos con usted para encontrar la solución que se adapte mejor a sus necesidades de impresión y presupuesto.</p>
+    </div>
+  </div>
+
+  <div class="row pt-5">
+    <h3 class="text-center pb-3">Impresoras Disponibles</h3>
+    <app-printer-carousel></app-printer-carousel>
+  </div>
+
+  <div class="row pt-5">
+    <h3 class="text-center pb-3">¿Por qué Elegir RICOH?</h3>
+    <div class="col-6 tabla1">
+      <h5 class="tabla-title">Calidad y Durabilidad</h5>
+      <p>RICOH es sinónimo de calidad y durabilidad. Sus impresoras son conocidas por su construcción robusta y confiabilidad a largo plazo. Esto significa que su inversión en una impresora RICOH es una garantía de un equipo de alta calidad que le servirá durante años.</p>
+    </div>
+    <div class="col-6 text-end tabla2">
+      <h5 class="tabla-title">Innovación Tecnológica</h5>
+      <p>RICOH se destaca por su innovación tecnológica. Sus impresoras ofrecen características de vanguardia, como la impresión a color de alta calidad y soluciones de flujo de trabajo avanzadas. Esto se traduce en una experiencia de impresión más eficiente y resultados profesionales.</p>
+    </div>
+    <div class="col-6 tabla3">
+      <h5 class="tabla-title">Sostenibilidad</h5>
+      <p>RICOH se preocupa por el medio ambiente. Su compromiso con la sostenibilidad se refleja en su enfoque ecológico en la producción de impresoras. Esto incluye iniciativas para reducir el impacto ambiental a través de procesos de fabricación más sostenibles y materiales amigables con el entorno.</p>
+    </div>
+    <div class="col-6 text-end tabla4">
+      <h5 class="tabla-title">Compatibilidad</h5>
+      <p>Las impresoras RICOH son altamente compatibles. Se integran sin problemas con sistemas y software ampliamente utilizados, lo que facilita su incorporación en su entorno de trabajo actual. Esto le permite aprovechar al máximo su inversión en tecnología de impresión.</p>
+    </div>
+  </div>
+
+  <div class="row pt-5 align-items-center">
+    <h3 class="text-center"> Contacto Fácil</h3>
+    <div class="col-lg-6 col-sm-12">
+      <p>¿Listo para dar el paso inteligente en la elección de su impresora? No dude en ponerse en contacto con nosotros. Estamos aquí para responder a sus preguntas, brindar asesoramiento personalizado y ofrecerle las mejores soluciones de impresión RICOH. Su próximo paso es tan simple como llamarnos o enviarnos un correo electrónico.<br><strong>¡Hagamos que su elección sea inteligente y sin complicaciones!</strong></p>
+    </div>
+    <div class="col-lg-3 col-6 text-center">
+      <a href="https://api.whatsapp.com/send?phone={{numero1.numero}}&text=Buenas, deseo asesoramiento para saber que impresora comprar."
+        class="contac-ws"
+        target="_blank">
+        <i class="ri-whatsapp-line"></i>
+      </a>
+    </div>
+    <div class="col-lg-3 col-6 text-center">
+      <a class="contac-mail" href="mailto:{{correo}}?subject=Venta%20&body=Buenas,%20deseo%20asesoramiento%20para%20saber%20que%20impresora%20comprar."><i class="ri-mail-line"></i></a>
+    </div>
+  </div>
+
+</div>
