--- a/src/app/pages/rent/rent.component.html
+++ b/src/app/pages/rent/rent.component.html
@@ -1,1 +1,46 @@
-<p>rent works!</p>
+<div class="container animate__animated animate__fadeIn">
+
+  <div class="row text-center pt-5">
+    <h3>Simplificamos su Experiencia</h3>
+    <p class="pt-3">En BAC SUPPORT, hacemos que el alquiler de impresoras RICOH sea sin complicaciones. Nuestro enfoque es simplificar su experiencia al máximo. Le brindamos la tranquilidad de que nos encargamos del mantenimiento y el soporte técnico, mientras usted se enfoca en su negocio.<br><strong>Bienvenido a una experiencia de alquiler sencilla con BAC SUPPORT.</strong></p>
+  </div>
+
+  <div class="row pt-5">
+    <h3 class="text-center pb-4">Beneficios del Alquiler</h3>
+    <div class="col-lg-4 col-sm-12">
+      <h5 class="pb-3">Mantenimiento Profesional</h5>
+      <p>Nos encargamos del mantenimiento integral de las impresoras RICOH que alquila. Esto significa que no tiene que preocuparse por problemas técnicos o costos adicionales, lo que le brinda una experiencia sin complicaciones de alquiler.</p>
+    </div>
+    <div class="col-lg-4 col-sm-12 info text-center">
+      <h5 class="pb-3 title2">Servicio Continuo</h5>
+      <p>Nuestro compromiso va más allá de la entrega inicial. Estamos a su disposición para garantizar que su impresora esté siempre en funcionamiento óptimo durante el período de alquiler. Esto le permite centrarse en su negocio en lugar de preocuparse por problemas de impresión.</p>
+    </div>
+    <div class="col-lg-4 col-sm-12 text-end">
+      <h5 class="pb-3 title2">Variedad de Modelos</h5>
+      <p>Ofrecemos una amplia selección de modelos de impresoras RICOH para alquiler, lo que le permite elegir la solución que mejor se adapte a sus necesidades. Ya sea una impresora multifunción o una impresora láser de alta calidad, trabajamos con usted para encontrar la solución adecuada.</p>
+    </div>
+  </div>
+
+  <div class="row pt-5">
+    <h3 class="text-center pb-3">Impresoras Disponibles</h3>
+    <app-printer-carousel></app-printer-carousel>
+  </div>
+
+  <div class="row pt-5 align-items-center">
+    <h3 class="text-center"> Contacto Fácil</h3>
+    <div class="col-lg-6 col-sm-12">
+      <p>¿Listo para simplificar su experiencia de alquiler de impresoras RICOH? ¡Nos encantaría saber de usted! Póngase en contacto con nosotros para obtener más información sobre nuestros contratos de alquiler, modelos disponibles y otros detalles. Estamos aquí para responder a sus preguntas y ayudarlo a tomar la decisión inteligente en soluciones de impresión. Simplemente llámenos o envíenos un correo electrónico.<br><strong>Hagamos que su experiencia de alquiler sea sin complicaciones.</strong></p>
+    </div>
+    <div class="col-lg-3 col-6 text-center">
+      <a href="https://api.whatsapp.com/send?phone={{numero1.numero}}&text=Buenas, deseo asesoramiento para saber que impresora rentar."
+      class="contac-ws"
+      target="_blank">
+      <i class="ri-whatsapp-line"></i>
+    </a>
+    </div>
+    <div class="col-lg-3 col-6 text-center">
+      <a class="contac-mail" href="mailto:{{correo}}?subject=Renta%20&body=Buenas,%20deseo%20asesoramiento%20para%20saber%20que%20impresora%20rentar."><i class="ri-mail-line"></i></a>
+    </div>
+  </div>
+
+</div>
