--- a/src/app/pages/supplies/supplies.component.html
+++ b/src/app/pages/supplies/supplies.component.html
@@ -1,1 +1,30 @@
-<p>supplies works!</p>
+<div class="container animate__animated animate__fadeIn">
+  <div class="row pt-5">
+    <h3 class="text-center">Mantenga sus Impresoras en Óptimas Condiciones</h3>
+    <p class="pt-3 text-center">En BAC SUPPORT, entendemos que mantener sus impresoras RICOH en funcionamiento óptimo es esencial para su negocio. Es por eso que ofrecemos una solución sencilla: una amplia variedad de repuestos y suministros de calidad.</p>
+    <P>Nuestro compromiso es brindarle acceso a los productos esenciales que necesita para mantener sus impresoras en perfectas condiciones. Ya sea que necesite cartuchos de tóner, piezas de repuesto o cualquier otro suministro, estamos aquí para satisfacer sus necesidades. La calidad y la confiabilidad son nuestro enfoque principal.</P>
+  </div>
+
+  <div class="row pt-5">
+    <h3>Nuestras Marcas</h3>
+    <p class="pt-3 pb-3">Solo trabajamos con las marcas más destacadas del mercado. Nos comprometemos a proporcionar a nuestros clientes repuestos y suministros de la más alta calidad para sus impresoras</p>
+    <app-brands-carousel></app-brands-carousel>
+  </div>
+
+  <div class="row pt-5 align-items-center">
+    <h3 class="text-center"> Contacto Fácil</h3>
+    <div class="col-lg-6 col-sm-12">
+      <p>Para obtener información detallada sobre repuestos y suministros, contáctenos. Estamos listos para ayudarlo a mantener sus impresoras RICOH en perfectas condiciones. Llámenos o envíenos un correo electrónico.<br><strong> Simplifiquemos su acceso a repuestos de calidad en BAC SUPPORT.</strong></p>
+    </div>
+    <div class="col-lg-3 col-6 text-center">
+      <a class="contac-ws"
+        href="https://api.whatsapp.com/send?phone={{numero1.numero}}&text=Buenas, deseo información sobre suminsitros."
+       target="_blank">
+       <i class="ri-whatsapp-line"></i>
+      </a>
+    </div>
+    <div class="col-lg-3 col-6 text-center">
+      <a class="contac-mail" href="mailto:{{correo}}?subject=Suministros%20&body=Buenas,%20deseo%20información%20sobre%20suministros."><i class="ri-mail-line"></i></a>
+    </div>
+  </div>
+</div>
