--- a/src/app/pages/technical-service/technical-service.component.html
+++ b/src/app/pages/technical-service/technical-service.component.html
@@ -1,1 +1,78 @@
-<p>technical-service works!</p>
+<div class="container animate__animated animate__fadeIn">
+
+  <div class="row pt-5">
+    <div class="col text-center">
+      <h3>Importancia del Mantenimiento</h3>
+      <p>
+        El servicio técnico desempeña un papel fundamental en el rendimiento y la vida útil de las impresoras RICOH. Nuestro compromiso con la excelencia técnica asegura que sus impresoras funcionen de manera óptima, lo que significa impresiones de alta calidad, menor tiempo de inactividad y un flujo de trabajo eficiente. En un mundo donde la impresión es esencial para muchas empresas, nuestro servicio técnico confiable y de alta calidad es la clave para mantener sus operaciones en marcha sin problemas.
+      </p>
+    </div>
+  </div>
+
+  <div class="row pt-5 align-items-center">
+    <div class="col">
+      <h3>Nuestra Experiencia</h3>
+      <p>Nuetros técnicos especializados cuentan con más de 20 años de experiencia en los distintos problemas que presentan las impresoras RICOH por lo que estamos capacitados para ofrecer una rápida solución ante cualquier daño o desperfecto de las mismas.</p>
+    </div>
+    <div class="col text-center">
+      <img class="ilustration" src="https://blilllly.github.io/images/bacsupport/experiencia.svg" alt="">
+    </div>
+  </div>
+
+  <div class="row pt-5 align-items-center">
+    <div class="col text-center">
+      <img class="ilustration" src="https://blilllly.github.io/images/bacsupport/calidad.svg" alt="">
+    </div>
+    <div class="col">
+      <h3>Garantía de Calidad</h3>
+      <p>Respaldamos nuestros servicios técnicos con una garantía de satisfacción del cliente del 100%. Si no está satisfecho con nuestro trabajo, haremos lo necesario para solucionarlo.</p>
+    </div>
+  </div>
+
+  <div class="row pt-5 align-items-center">
+    <div class="col">
+      <h3>Tiempos de Respuesta</h3>
+      <p>Nos comprometemos a responder a las solicitudes de servicio técnico en un plazo máximo de 24 horas laborables.</p>
+    </div>
+    <div class="col text-center">
+      <img class="ilustration" src="https://blilllly.github.io/images/bacsupport/tiempo.svg" alt="">
+    </div>
+  </div>
+
+  <div class="row text-center pt-5 pb-3">
+    <h3>Testimonios y Reseñas</h3>
+    <p>Tenemos la totalidad de la confianza de nuestros clientes y puede verificarlo usted mismo en esta sección.</p>
+  </div>
+  <app-testimonial-carousel [testimonials]="testimonials"></app-testimonial-carousel>
+
+  <div class="row pt-5 align-items-center">
+    <div class="col text-center">
+      <img class="ilustration" src="https://blilllly.github.io/images/bacsupport/proceso.svg" alt="">
+    </div>
+    <div class="col">
+      <h3>Proceso de Servicio Técnico</h3>
+      <p>Nuestro proceso de servicio técnico consta de tres sencillos pasos: chequeo o diagnóstico, aprobación y mantenimiento.</p>
+    </div>
+  </div>
+
+  <div class="row pt-5 align-items-center">
+    <div class="col-6">
+      <h3>Contácto Fácil</h3>
+      <p>¿Necesita asistencia técnica? No dude en ponerse en contacto con nosotros a través de whatsapp, llamada o email.</p>
+    </div>
+    <div class="col-3 text-center">
+      <a class="contac-ws"
+      href="https://api.whatsapp.com/send?phone={{numero1.numero}}&text=Buenas, deseo información sobre el servicio técnico."
+      target="_blank"><i class="ri-whatsapp-line"></i></a>
+    </div>
+    <div class="col-3 text-center">
+      <a class="contac-mail" href="mailto:{{correo}}?subject=Servicio%20Técnico%20&body=Buenas,%20deseo%20información%20sobre%20el%20servicio%20técnico."><i class="ri-mail-line"></i></a>
+    </div>
+  </div>
+
+  <!-- <div class="row text-center">
+    <h3>Galería de Trabajos</h3>
+    <p>Eche un vistazo a algunos de nuestros proyectos de servicio técnico anteriores</p>
+  </div> -->
+
+</div>
