--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
-<header>
-  <app-header></app-header>
-</header>
-<app-carousel></app-carousel>
-<main>
-  <router-outlet></router-outlet>
-</main>
-<footer>
-  <app-footer></app-footer>
-</footer>
+@if (isLoaded) {
+  <header>
+    <app-header></app-header>
+  </header>
+  <app-carousel></app-carousel>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+  <footer>
+    <app-footer></app-footer>
+  </footer>
+}@else if (!isLoaded){
+  <app-loading-spinner></app-loading-spinner>
+}
